data.table conversion

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,9 +5,9 @@ importFrom(rCharts, rCharts)
 importFrom(d3Network, d3ForceNetwork)
 
 export(ReadCRANData, DownloadDataFile, DataState, PackagesToDownload)
-export(State)
+export(Date, State)
 export(PackageHistory)
 export(DependencyGraph, Dependencies, GraphSubset)
 export(RenderSankey, RenderGraph)
-export(Clones)
+export(Clones, ClonesWith)
 export(Conflicts)
