Clones & Conflicts fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,4 @@ export(PackageHistory)
 export(DependencyGraph, Dependencies, GraphSubset)
 export(RenderSankey, RenderGraph)
 export(Clones, ClonesWith)
-export(Conflicts)
+export(Conflicts, ConflictsWith)
