--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,5 @@ export(Date, State)
 export(PackageHistory)
 export(DependencyGraph, Dependencies, GraphSubset)
 export(RenderSankey, RenderGraph)
-export(Clones, ClonesWith)
+export(Clones, ClonesWith, CloneGraph, SimplifyCloneGraph)
 export(Conflicts, ConflictsWith)
